tests/fixtures/invalid/round_set_list.py
# Cannot call round() with Set[int], List[int]
x = round({1, 2, 3}, [1, 2, 3])
